--- a/www/login.html
+++ b/www/login.html
@@ -7,8 +7,15 @@
 	<meta name="viewport" content="width=device-width,viewport-fit=cover,initial-scale=1">
 	<link rel="icon" href="pic/icon.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="pic/icon.png" type="image/x-icon" />
-	<link href="css/login.css" rel="stylesheet" type="text/css">
+	<link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<script src="js/public/jquery-2.1.0.min.js" type="text/javascript" ></script>
+	<style type="text/css">
+		#lock{
+			position: absolute;top:0px;left:0px;width:100%;height:100%;display:none;
+			opacity:0.7;filter:alpha(opacity=70);background: #000000;
+			z-index: 1000;
+		}
+	</style>
 </head>
 
 <body>
@@ -18,9 +25,10 @@
 			<div id="lgc_mid"></div>
 			<div id="lgc_bot"></div>
 		</div>
-		<div id="lock" class="mid_center">
-			<img src="pic/juhua.gif" class="abs_mid" />
-		</div>
 	</div>
+	<div id="lock" class="mid_center">
+		<img src="pic/juhua.gif" class="abs_mid" />
+	</div>
+	<script src="bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript" ></script>
 	<script src="js/login.js" type="text/javascript" ></script>
 </body>
