添加登录界面

--- a/www/login.html
+++ b/www/login.html
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="pic/icon.png" type="image/x-icon" />
 	<link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<script src="js/public/jquery-2.1.0.min.js" type="text/javascript" ></script>
+	<script src="js/login.js" type="text/javascript" ></script>
 	<style type="text/css">
 		#lock{
 			position: absolute;top:0px;left:0px;width:100%;height:100%;display:none;
@@ -17,13 +18,23 @@
 		}
 	</style>
 </head>
-
-<body>
-	<div class="div_content" id="div_content">
-	</div>
-	<div id="lock" class="mid_center">
-		<img src="pic/juhua.gif" class="abs_mid" />
-	</div>
-	<script src="bootstrap-3.3.7/js/bootstrap.min.js" type="text/javascript" ></script>
-	<script src="js/login.js" type="text/javascript" ></script>
+<body class="text-center">
+<form class="form-signin">
+  <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+  <label for="inputEmail" class="sr-only">Email address</label>
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+  <label for="inputPassword" class="sr-only">Password</label>
+  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+  <div class="checkbox mb-3">
+    <label>
+      <input type="checkbox" value="remember-me"> Remember me
+    </label>
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
+</form>
+<div id="lock" class="mid_center">
+	<img src="pic/juhua.gif" class="abs_mid" />
+</div>
 </body>
