--- a/www/login.html
+++ b/www/login.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="pic/icon.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="pic/icon.png" type="image/x-icon" />
 	<link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="css/signin.css" rel="stylesheet" type="text/css">
 	<script src="js/public/jquery-2.1.0.min.js" type="text/javascript" ></script>
 	<script src="js/login.js" type="text/javascript" ></script>
 	<style type="text/css">
