--- a/www/index_01.html
+++ b/www/index_01.html
@@ -8,9 +8,9 @@
     <link rel="icon" href="pic/icon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="pic/icon.png" type="image/x-icon" />
     <link href="bootstrap-4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/signin.css" rel="stylesheet" type="text/css">
+    <link href="css/index_01.css" rel="stylesheet" type="text/css">
     <script src="js/public/jquery-2.1.0.min.js" type="text/javascript"></script>
-    <script src="js/login.js" type="text/javascript"></script>
+    <script src="js/index_01.js" type="text/javascript"></script>
     <script src="bootstrap-4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         #lock {
@@ -29,22 +29,8 @@
 </head>
 
 <body class="text-center">
-    <form class="form-signin" method="post" onsubmit="return onsubmit_login()">
-        <!-- <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> -->
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="text" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-        <div class="checkbox mb-3">
-            <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
-    </form>
-    <div id="lock" class="mid_center">
+    <div id="main_contect"></div>
+    <div id="lock">
         <img src="pic/juhua.gif" class="abs_mid" />
     </div>
 </body>
